--- a/src/layuiadmin/style/sideUpaload.css
+++ b/src/layuiadmin/style/sideUpaload.css
@@ -21,6 +21,7 @@
     margin-bottom: 15px;
     padding: 5px;
     border: 1px solid #eee;
+    cursor: pointer;
 }
 
 .side-upload .article .upload-item.ok:hover {
