--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -280,7 +280,7 @@
           { checkbox: true, width: "5%" }
           , { field: 'id', title: 'ID', width: "10%" }
           , { field: 'name', title: '收费项目', width: "10%" }
-          , { field: 'templateNo', title: '收费项目', width: "10%" }
+          , { field: 'templateNo', title: '收费项目编号', width: "10%" }
           , { field: 'date', title: '创建日期', width: "10%" }
           , { field: 'end', title: '结束日期', width: "10%" }
           , { field: 'schoolname', title: '学校', width: "10%" }
@@ -375,7 +375,7 @@
                 { checkbox: true, width: "5%" }
                 , { field: 'id', title: 'ID', width: "5%" }
                 , { field: 'name', title: '收费项目', width: "15%" }
-                , { field: 'templateNo', title: '收费项目', width: "15%" }
+                , { field: 'templateNo', title: '收费项目编号', width: "15%" }
                 , { field: 'date', title: '创建日期', width: "15%" }
                 , { field: 'schoolname', title: '学校', width: "10%" }
                 , { field: 'gradename', title: '年级', width: "10%", minWidth: 100}
