--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -246,11 +246,11 @@
 
     let cbox = document.getElementById("changeBox");
     let clMap = {},
-      gradeMap = {
-        G1: '高一',
-        G2: '高二',
-        G3: '高三',
-      };
+        gradeMap = {
+          G1: '高一年级',
+          G2: '高二年级',
+          G3: '高三年级',
+        };
 
 
     // ----------初始化页面------------------
