--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -141,9 +141,9 @@
           </div>
           <div class="center">
             <div class="dialog-btn-box">
-              <button id="bindCl" class="layui-btn" onclick="configUserPower()">启用班级<i
+              <button id="bindCl" class="layui-btn" onclick="configUserPower()">启用学校<i
                   class="layui-icon layui-icon-next"></i></button>
-              <button id="unboundCl" class="layui-btn" onclick="deleteUserPower()"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
+              <button id="unboundCl" class="layui-btn" onclick="deleteUserPower()"><i class="layui-icon layui-icon-prev"></i>禁用学校</button>
               <button id="close-bind-dialog" class="layui-btn" onclick="closeDialog()"><i
                   class="layui-icon layui-icon-close"></i>关闭</button>
             </div>
