--- a/src/views/index.html
+++ b/src/views/index.html
@@ -49,7 +49,7 @@
               <cite id="index-username-box">贤心</cite>
             </a>
             <dl class="layui-nav-child">
-              <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
+              <dd  style="text-align: center;" onclick="goOut()"><a>退出</a></dd>
             </dl>
           </li>
           
