--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -161,6 +161,7 @@
 
   <script src="../../layuiadmin/modules/api.js"></script>
   <script src="../../layuiadmin/layui/layui.js"></script>
+  <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
   <script>
     layui.config({
       base: '../../layuiadmin/' //静态资源所在路径
@@ -191,9 +192,12 @@
       });
     })
 
-
-    reloadTable();
+    getScTree();
     getRoleList();
+
+    setTimeout(()=>{
+      reloadTable();
+    }, 500)
 
     // ----------------------部分独立方法---------------------------
     function reloadTable(name = '', phone = '', page = '1') {
@@ -313,7 +317,6 @@
   <script src="../../layuiadmin/modules/delete.js"></script>
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
-  <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
   <script src="../../layuiadmin/modules/dialog.js"></script>
 </body>
 
