--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -253,7 +253,8 @@
     layui.config({
       base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
-      index: 'lib/index' //主入口模块
+      index: 'lib/index', //主入口模块
+      dtree: '{/}../../layuiadmin/style/dtree/dtree'
     }).use(['index', 'console']);
 
     gradeMap = {
