--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -28,7 +28,7 @@
         <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除缴费模板</button>
         <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改缴费模板</button>
         <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找缴费模板</button>
-        <button id="bindBt" class="layui-btn"><i class="layui-icon layui-icon-template-1"></i>配置模板启用机构</button>
+        <button class="layui-btn" onclick="handleConfigTemGr()"><i class="layui-icon layui-icon-template-1"></i>配置模板启用年级</button>
         <button id="detailBt" class="layui-btn"><i class="layui-icon layui-icon-survey"></i>查看费用明细</button>
       </div>
     </div>
@@ -192,9 +192,9 @@
           </div>
           <div class="center">
             <div class="dialog-btn-box">
-              <button id="bindCl" class="layui-btn" onclick="bindCl(0)">启用班级<i
+              <button id="bindCl" class="layui-btn" onclick="congfigTemGr()">启用班级<i
                   class="layui-icon layui-icon-next"></i></button>
-              <button id="unboundCl" class="layui-btn"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
+              <button id="unboundCl" class="layui-btn" onclick="deleteTemGr()"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
               <button id="close-bind-dialog" class="layui-btn" onclick="closeDialog()"><i
                   class="layui-icon layui-icon-close"></i>关闭</button>
             </div>
@@ -249,6 +249,7 @@
 
   <script src="../../layuiadmin/layui/layui.js"></script>
   <script src="../../layuiadmin/modules/api.js"></script>
+  <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
   <script>
     layui.config({
       base: '../../layuiadmin/' //静态资源所在路径
@@ -263,6 +264,7 @@
       G3: '高三'
     }
 
+    getGrTree();
     getScList();
     reloadTable();
 
@@ -350,6 +352,16 @@
             res.rows.list.forEach(item => {
               let time = new Date(parseInt(item.addtime) * 1000).toLocaleString().replace(/:\d{1,2}$/,' ');
 
+              let str = '';
+
+              let arr = item.grade_no.split(',');
+
+              arr = arr.map(id => {
+                return gradeMap[id];
+              })
+
+              str = arr.join(',');
+
               let one = {
                 id: item.id,
                 name: item.item_name,
@@ -357,7 +369,7 @@
                 date: time,
                 schoolname: item.schoolname,
                 school: item.school_id,
-                gradename: gradeMap[item.grade_no],
+                gradename: str,
                 grade: item.grade_no,
                 sum: item.amt,
                 detail: item.remark
@@ -453,7 +465,6 @@
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
   <script src="../../layuiadmin/modules/dialog.js"></script>
-  <script src="../../layuiadmin/modules/bindOrUnbound.js"></script>
   <script src="../../layuiadmin/modules/paymentDetail.js"></script>
 </body>
 
