--- a/src/views/payment/list.html
+++ b/src/views/payment/list.html
@@ -68,8 +68,8 @@
                     <div class="layui-form-item input-box">
                         <label class="layui-form-label">开始时间</label>
                         <div class="layui-input-block">
-                            <input id="starttime" type="text" name="start" placeholder="数据格式:xx-xx-xx" autocomplete="off"
-                                class="layui-input">
+                            <input id="starttime" type="text" name="start" placeholder="数据格式:xx-xx-xx"
+                                autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item input-box">
@@ -88,7 +88,7 @@
             <div class="condition-box layui-anim layui-anim-scale" id="exportConditin">
                 <div class="header">
                     <div>导出列表筛选条件</div>
-                    <div onclick="cdb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
+                    <div onclick="ecb.style.display = 'none'"><i class="layui-icon layui-icon-close"></i></div>
                 </div>
                 <div class="form-box layui-form" lay-filter="exportForm">
                     <div class="layui-form-item input-box">
@@ -112,8 +112,8 @@
                     <div class="layui-form-item input-box">
                         <label class="layui-form-label">开始时间</label>
                         <div class="layui-input-block">
-                            <input id="starttime2" type="text" name="start" placeholder="数据格式:xx-xx-xx" autocomplete="off"
-                                class="layui-input">
+                            <input id="starttime2" type="text" name="start" placeholder="数据格式:xx-xx-xx"
+                                autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item input-box">
@@ -191,13 +191,13 @@
                 , cols: [[ //表头
                     { checkbox: true, width: "5%" }
                     , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                    , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
-                    , { field: 'pid', title: '身份证号', width: "15%", minWidth: 200 }
-                    , { field: 'schoolname', title: '学校', width: "10%", minWidth: 100 }
-                    , { field: 'order_id', title: '订单ID', width: "10%", minWidth: 100 }
-                    , { field: 'student_id', title: '学生ID', width: "10%", minWidth: 100 }
-                    , { field: 'openid', title: '缴费人公开ID', width: "15%", minWidth: 100 }
-                    , { field: 'date', title: '日期', width: "20%", minWidth: 200 }
+                    , { field: 'name', title: '姓名', width: "10%" }
+                    , { field: 'pid', title: '身份证号', width: "20%" }
+                    , { field: 'schoolname', title: '学校', width: "10%" }
+                    , { field: 'order_id', title: '订单ID', width: "10%" }
+                    , { field: 'student_id', title: '学生ID', width: "10%" }
+                    , { field: 'openid', title: '缴费人公开ID', width: "15%" }
+                    , { field: 'date', title: '日期', width: "15%" }
                 ]]
             });
         });
@@ -278,13 +278,13 @@
                             , cols: [[ //表头
                                 { checkbox: true, width: "5%" }
                                 , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                                , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
-                                , { field: 'pid', title: '身份证号', width: "15%", minWidth: 200 }
-                                , { field: 'schoolname', title: '学校', width: "10%", minWidth: 100 }
-                                , { field: 'order_id', title: '订单ID', width: "10%", minWidth: 100 }
-                                , { field: 'student_id', title: '学生ID', width: "10%", minWidth: 100 }
-                                , { field: 'openid', title: '缴费人公开ID', width: "15%", minWidth: 100 }
-                                , { field: 'date', title: '日期', width: "20%", minWidth: 200 }
+                                , { field: 'name', title: '姓名', width: "10%" }
+                                , { field: 'pid', title: '身份证号', width: "20%" }
+                                , { field: 'schoolname', title: '学校', width: "10%" }
+                                , { field: 'order_id', title: '订单ID', width: "10%" }
+                                , { field: 'student_id', title: '学生ID', width: "10%" }
+                                , { field: 'openid', title: '缴费人公开ID', width: "15%" }
+                                , { field: 'date', title: '日期', width: "15%" }
                             ]]
                         });
 
