--- a/src/views/jurisdiction/role.html
+++ b/src/views/jurisdiction/role.html
@@ -144,6 +144,7 @@
             base: '../../layuiadmin/' //静态资源所在路径
         }).extend({
             index: 'lib/index', //主入口模块
+            dtree: '{/}../../layuiadmin/style/dtree/dtree'
         }).use(['index', 'console']);
 
 
